===v6.0.3===
 * Re-implemented the stance condition for paladin seals
 * Minor updates for some buff/debuff equivalancies. Still need help getting these completely up to date, though! If you notice something missing, please let me know!
 * Bug fixes:
 ** Fixed static formats again (ICONMENU_MULTISTATECD_DESC)
 ** (Condition ROLE): attempt to index global "roles" (a nil value)
 ** Buff/debuff duration sorting actually works now! Woah!
 
===v6.0.2===
 * Cooldown icons should now provide much better functionality when checking multiple spells. Single-spell functionality should (hopefully) remain unchanged.
 * Updated the name and description of the "Spell Cast Succeeded" Combat Event to reflect that it now only tracks instant cast spells.
 * Bug fixes:
 ** Bumped TellMeWhen_Options interface number
 ** Fixed warlock stance suggestions
 ** Removed paladin auras
 ** Fixed name coloring issue
 ** Fixed an error with range checking invalid spells
 ** Holy power limit increased to 5
 ** The "Show Variable text" setting should no longer cause errors
 ** Fixed the GCD spell for warriors (again)
 ** Fixed an issue with static formats and ptBR, zhCN, and zhTW.
 ** \Core\Conditions\Categories\BuffsDebuffs.lua:56 attempt to index global 'strlowerCache' (a nil value)
 
===v6.0.1===
 * Bug fix: Fixed positioning issues when using Masque.
 
===v6.0.0===
 * This is by and large the biggest update that TMW has ever seen. There were so many changes that I lost track of them. Here are a few:
 * Full support for Mists of Pandaria. If anything is missing, please open a ticket.
 
 * Almost everything in TMW is now modular. The most immediate effect of this is that the main tab in the icon editor is now divided into panels for each component that is contributing to an icon.